--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,8 +4,15 @@ on:
     branches:
       - main
       - dev
+env:
+  MONGODB_DB_NAME: gha-demo
 jobs:
   test:
+    env:
+      MONGODB_CLUSTER_ADDRESS: cluster0.mgt0c.mongodb.net
+      MONGODB_USERNAME: verma623
+      MONGODB_PASSWORD: kOTKdj6eFhK0oznd
+      PORT: 8080
     environment: testing
     runs-on: ubuntu-latest
     steps:
@@ -19,15 +26,19 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run server
-        run: npm start & npx wait-on http://127.0.0.1:XYZ
+        run: npm start & npx wait-on http://127.0.0.1:$PORT
       - name: Run tests
         run: npm test
       - name: Output information
-        run: echo "..."
+        run: |
+          echo "MongoDB_Username: ${{ env.MONGODB_USERNAME }}"
+          echo "MongoDB_Password: ${{ env.MONGODB_PASSWORD }}"
+
   deploy:
     needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Output information
         run: |        
-          echo "..."
+          echo "MongoDB_Username: ${{ env.MONGODB_DB_NAME}}"
+          echo "MongoDB_DB_Name: ${{ env.MONGODB_DB_NAME}}"
