--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,5 +40,5 @@ jobs:
     steps:
       - name: Output information
         run: |        
-          echo "MongoDB_Username: ${{ env.MONGODB_DB_NAME}}"
-          echo "MongoDB_DB_Name: ${{ env.MONGODB_DB_NAME}}"
+          echo "MongoDB_Name: ${{ env.MONGODB_DB_NAME}}"
+          echo "MongoDB_DB_Password: ${{ env.MONGODB_PASSWORD }}"
