--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,8 @@ jobs:
   test:
     env:
       MONGODB_CLUSTER_ADDRESS: cluster0.mgt0c.mongodb.net
-      MONGODB_USERNAME: verma623
-      MONGODB_PASSWORD: kOTKdj6eFhK0oznd
+      MONGODB_USERNAME: ${{ secret.MONGODB_USERNAME }}
+      MONGODB_PASSWORD: ${{  secrets.MONGODB_PASSWORD }}
       PORT: 8080
     environment: testing
     runs-on: ubuntu-latest
